# CurSor

./: .gitignore  1.py  C#学习指南.md  C#开发指南.md  Python代码编写教程_备份清单.md  README.md  ant1.m  chafenfangchang.m  class__three_xian_xin_hui_gui.m  create_csharp_project.ps1  lvxinshangwenti.m  new.xlsx  one_zhi_fang_yu_zheng_tai_mi_du_p_p_tu.m  shujuduqu.m  shujuduqu_complete.m  test_12_hui_gui_fen_xi_1.m  test_12_tong的使用说明.txt  tuihuo3_tsp_lv_xin_shang.m  twoclass_cha_zhi_wang_ge.m  twoclass_cha_zhi_wang_ge_wen_du_fen_bu_cha_zhi_ke_shi_hua.m  xiangkan.m  zhengtaifenbucanshujianyan_re_pierxun_lielianbiao.m  例题_频数统计_绘制频率多边形.py  创建Python备份.ps1  参考旭东代码数据提取.py  数据创立.py  数据创立结果.xlsx  第三问改进.py
CurSor-/: .gitignore  1.py  ant1.m  chafenfangchang.m  chafenfangcheng_shuang_bian_liang.m  class__three_xian_xin_hui_gui.m  lvxinshangwenti.m  neural_network_model.mat  new.xlsx  one_zhi_fang_yu_zheng_tai_mi_du_p_p_tu.m  one样本统计结果.py  person_demo.xlsx  shujuduqu.m  shujuduqu_complete.m  test_12_hui_gui_fen_xi_1.m  test_12_shu_ju_chu_li_tong.m  test_12_tong的使用说明.txt  tuihuo3_tsp_lv_xin_shang.m  twoclass_cha_zhi_wang_ge.m  twoclass_cha_zhi_wang_ge_wen_du_fen_bu_cha_zhi_ke_shi_hua.m  xiangkan.m  zhengtaifenbucanshujianyan_re_pierxun_lielianbiao.m  例题_频数统计_绘制频率多边形.py  参考XD代码数据提取.py  数据创立.py  数据输入格式说明.md  正态分布参数检验_热_皮尔逊_列联表热力图_.py  风速时间数据.xlsx
MCP/PDF/: .gitignore  Dockerfile  Dockerfile.dev  Python依赖包列表.txt  README.md  debug_test.py  docker-compose.override.yml  docker-compose.yml  docker-compose错误分析报告.md  process_pdf_to_docx.py  pyproject.toml  simple_pdf_to_docx.py  test_mcp_client.py  项目详细注释文档.md
MCP/PDF/config/: example_config.json
MCP/PDF/examples/: advanced_usage.py  basic_usage.py
MCP/PDF/scripts/: find_uncommented_py.py  run_pdf_to_docx.py
MCP/PDF/src/pdf_mcp_server/: __init__.py  cli.py  http_app.py  main.py  mcp_stdio.py  models.py  worker.py
MCP/PDF/src/pdf_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
MCP/PDF/src/pdf_mcp_server/mcp/: __init__.py  exceptions.py  protocol.py  server.py  tools.py
MCP/PDF/src/pdf_mcp_server/mcp/tools/: __init__.py  base.py  document_analysis.py  formula_extraction.py  ocr_extraction.py  table_extraction.py  text_extraction.py
MCP/PDF/src/pdf_mcp_server/processors/: __init__.py  document_analyzer.py  formula_extractor.py  ocr_processor.py  pdf_processor.py  table_extractor.py  text_extractor.py
MCP/PDF/src/pdf_mcp_server/tools/: __init__.py  document_analysis.py  formula_extraction.py  formula_recognition.py  full_pipeline.py  ocr_extraction.py  ocr_processing.py  pdf_analysis.py  table_extraction.py  text_extraction.py
MCP/PDF/src/pdf_mcp_server/utils/: __init__.py  config.py  docx_exporter.py  exceptions.py  file_utils.py  logging_config.py  validation.py
MCP/PDF/tests/: test_docx_exporter.py  test_http_docx.py  test_pdf_mcp_server.py
MCP_run_PDF/: 14531.docx
(+538 files in other folders)
